# Multiple_Polygon_Generate

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cube.off  log.txt  mesh.cpp  mesh.h  multi_polygon  multi_polygon.cpp  polygon.cpp  polygon.h
